# Emo-s-Book-Blog

./: Procfile  README.md  myapp.py  pyproject.toml  requirements.txt
static/JavaScript/: sample.js
static/css/: sample.css
templates/: admin.html  base.html  create.html  index.html  login.html  readmore.html  signup.html  update.html
